# ops-data-store

./: .example.env  .example.test.env  .gitignore  .gitlab-ci.yml  .safety-policy.yml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.gitlab/issue_templates/: deploy.md  release.md
qgis/: qgis-project.qgz
resources/data/: dataset-grants.sql  dataset-roles.sql  dataset-schemas.sql
resources/db/: datasets-controlled.sql  grants.tpl.sql  planning_field_ops.sql  roles.sql  schemas.sql  users.tpl.sql
src/ops_data_store/: __init__.py  airnet.py  auth.py  backup.py  config.py  data.py  db.py  logging.py  utils.py
src/ops_data_store/cli/: __init__.py  auth.py  backup.py  data.py  db.py
src/ops_data_store/cli/auth/: __init__.py
src/ops_data_store/cli/config/: __init__.py
src/ops_data_store/cli/db/: __init__.py
tests/: conftest.py  mocks.py
tests/ops_data_store_tests/: test_airnet.py  test_auth.py  test_backup.py  test_config.py  test_data.py  test_db.py  test_logging.py  test_utils.py
tests/ops_data_store_tests/cli/: test_cli.py  test_cli_auth.py  test_cli_backup.py  test_cli_config.py  test_cli_data.py  test_cli_db.py
tests/resources/: test-data.sql  test-schemas.sql
tests/resources/db/: grants.sql  users.sql
